Fix nullptr deref in ChildThreadImpl

It's possible that a child process has no Service Manager connection. This
avoids dereferencing a null |service_manager_connection_| in that case.

BUG=705175,704747
TBR=ben@chromium.org

Review-Url: https://codereview.chromium.org/2779443002
Cr-Commit-Position: refs/heads/master@{#459634}

Former-commit-id: 7844edf8040581364b3651ac6e0f4ddbc27efe9a